--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 # Financial QA System Requirements
 # Core ML and NLP libraries
-transformers==4.42.4
 torch>=2.0.0
+transformers==4.42.4
 tokenizers>=0.14
 sentence-transformers>=2.2.0
 datasets>=2.0.0
+
+# Beautiful Soup for parsing reports from web
+beautifulsoup4==4.13.4
 
 # Vector database and similarity search
 faiss-cpu>=1.7.0
@@ -29,6 +32,7 @@ accelerate>=0.20.0
 # For Apple Silicon Macs (optional)
 
 # torch-audio  # Only if needed
+
 
 
 
